# ChestParser

./: README.md  TB_Chests_MY_CLAN_2025-03-11_FINAL.csv  config.ini  debug.py  debug_chart_data.py  fix_charts.py  german-umlaut-solution.md  main.py  pyproject.toml  test_charts.py
data/: TB_Chests_test.csv  sample.csv  test_data.csv
data/exports/: ChartData_CHEST_20250313_032621.csv  ChartData_PLAYER_20250313_021859.csv  ChartData_PLAYER_20250313_023923.csv  ChartData_PLAYER_20250313_025040.csv  TotalBattle_Full_Report_20250312_213250.html  TotalBattle_Full_Report_20250313_021946.html  TotalBattle_Full_Report_20250313_023932.html  TotalBattle_Full_Report_20250313_025055.html  TotalBattle_Full_Report_20250313_032713.html  TotalBattle_Player Overview_20250313_030417.csv  chart_data.csv  player_overview_export.csv  raw_data_export.csv
docs/: app_project.mdc  app_report.mdc  bugfixing.mdc  bugfixing_update.md  memory.mdc  todo.mdc
export/: player_total_scores.csv
exports/: chart_data.csv  export_player_total_scores.csv  player_overview.csv  scores_by_chest_type.csv
refactor-plans/: phase1-refactoring-plan.md  phase2-refactoring-plan.md  phase3-part1-analysis-services.md  phase3-part2-visualization-services.md  phase3-part3-reporting-services.md  phase3-part4-application-services.md  phase3-part5-integration-testing.md  phase3-refactoring-plan-overview.md  phase3-refactoring-plan.md  phase4-overview.md  phase4-part1-ui-foundation.md  phase4-part2-ui-components.md  phase4-part3-analysis-screen.md  phase4-part3-application-screens.md  phase4-part4-charts-screen.md  phase4-part5-report-screen.md  phase4-refactoring-plan-overview.md  phase5-overview.md  phase5-part1-test-strategy.md  phase5-part2-unit-testing.md  phase5-part3-integration-testing.md  phase5-part4-ui-testing.md  phase5-part5-performance-security-deployment.md  phase6-overview.md  phase6-part1-cicd-strategy.md  phase6-part2-continuous-integration.md  phase6-part3-automated-testing.md  phase6-part4-continuous-deployment.md  phase6-part5-monitoring-maintenance.md  phase7-overview.md  phase7-part1-advanced-analytics.md  phase7-part1-section1-statistical-framework.md  phase7-part1-section2-ml-integration.md  phase7-part1-section3-performance-optimization.md  phase7-part2-plugin-framework.md  phase7-part2-section1-extensibility-architecture.md  phase7-part2-section2-plugin-management.md  phase7-part2-section3-security-model.md  phase7-part3-api-integration.md  phase7-part3-section1-restful-api.md  (+4 more)
src/: config.ini  main.py  test_analysis_tab.py  test_analyzer.py  test_file.csv  test_imports.py  total-battle-analyzer.py  total-battle-analyzer.py.bak  total-battle-analyzer.py.original
src/modules/: configmanager.py  customtablemodel.py  dataprocessor.py  droparea.py  filterarea.py  importarea.py  mainwindow.py  mainwindow.py.bak  mainwindow_backup_1741822464.py  mainwindow_backup_1741823145.py  mplcanvas.py  stylemanager.py  utils.py
