[project]
name = "total-battle-analyzer"
version = "1.0.0"
description = "A desktop application for analyzing and visualizing data from the Total Battle game"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Total Battle Analyzer Team"}
]
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyside6>=6.8.2.1",
    "numpy>=1.26.4",
    "ftfy>=6.1.3",
    "charset-normalizer>=3.3.2",
    "unidecode>=1.3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Set a higher line length limit
line-length = 120

# Specify a less strict Python version
target-version = "py38"

# Reduce the number of enabled rule sets
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
]

# Explicitly ignore more rules
ignore = [
    "E203",  # Whitespace before ':'
    "E501",  # Line too long
    "F401",  # Unused imports
    "F403",  # 'from module import *' used
    "F405",  # Name may be undefined, or defined from star imports
]

# Exclude more files and directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
    "tests",
    "scripts",
    "venv",
    "__pycache__",
    "*.md",
    "**/*.md"
]

# Allow unused variables when they start with an underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Relax some pycodestyle options
[tool.ruff.pycodestyle]
max-doc-length = 150

# Disable certain mccabe checks
[tool.ruff.mccabe]
# Set a higher maximum complexity threshold
max-complexity = 15

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.254",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

